--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "https://github.com/GeorgiGeorgiev7",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.1"
+    "hardhat": "^2.10.1",
+    "keccak256": "^1.0.6"
   }
 }
